// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rung Class New Instance Initializes with Desired Document Model 1`] = `
Rung {
  "_dom": Object {
    "attributes": Object {
      "Number": 12,
      "Type": "N",
    },
    "elements": Array [
      Object {
        "elements": Array [
          Object {
            "cdata": "XIC(someTag)NOP();",
            "type": "cdata",
          },
        ],
        "name": "Text",
        "type": "element",
      },
    ],
    "name": "Rung",
    "type": "element",
  },
  "class_id": "b49e5b79e8662ca3b6e884d3057719d0",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Rung Class New Instance Initializes with Desired Document Model 2`] = `
Rung {
  "_dom": Object {
    "attributes": Object {
      "Number": 12,
      "Type": "N",
    },
    "elements": Array [
      Object {
        "elements": Array [
          Object {
            "cdata": "I am a comment",
            "type": "cdata",
          },
        ],
        "name": "Comment",
        "type": "element",
      },
      Object {
        "elements": Array [
          Object {
            "cdata": "XIC(someTag)NOP();",
            "type": "cdata",
          },
        ],
        "name": "Text",
        "type": "element",
      },
    ],
    "name": "Rung",
    "type": "element",
  },
  "class_id": "b49e5b79e8662ca3b6e884d3057719d0",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;
